letPoly/testcases/letPoly/ill-Typed/ifBranchConditionWrongType.lam
if (lam x . x) then zero else false
